--- a/product-details2.html
+++ b/product-details2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Metro | Product Details 2 </title>
+    <title> Gadallah | Product Details 2 </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -88,7 +88,7 @@
                       <div class="input-group-btn">
                         <div class="btn-group" role="group">
                           <div class="dropdown dropdown-lg">
-                            <button type="button" class="btn btn-metro dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                            <button type="button" class="btn btn-Gadallah dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                               <span>All Categories</span>
                               <i class="fa fa-caret-up" aria-hidden="true"></i>
                               <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -100,11 +100,11 @@
                                 <li><a href="shop3.html"><i class="flaticon-plug"></i>Ecomatic Hooker</a></li>
                                 <li><a href="shop7.html"><i class="flaticon-necklace"></i>Pompain Oven</a></li>
                                 <li><a href="shop7.html"><i class="flaticon-screen"></i>Pompain Hoods</a></li>
-                                <li><a href="shop7.html"><i class="flaticon-headphones"></i>Pompain Hookers</a></li>
+                                <li><a href="shop7.html"><i class="flaticon-headphones"></i>Pompain Hobs</a></li>
                               </ul>
                             </div>
                           </div>
-                          <button type="button" class="btn btn-metro-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                          <button type="button" class="btn btn-Gadallah-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                           </button>
                         </div>
                       </div>
@@ -166,7 +166,7 @@
                             <li><a href="shop3.html"><i class="flaticon-plug"></i>Ecomatic Hooker</a></li>
                             <li><a href="shop3.html"><i class="flaticon-necklace"></i>Pompain Oven</a></li>
                             <li><a href="shop3.html"><i class="flaticon-screen"></i>Pompain Hoods</a></li>
-                            <li><a href="shop3.html"><i class="flaticon-headphones"></i>Pompain Hookers</a></li>
+                            <li><a href="shop3.html"><i class="flaticon-headphones"></i>Pompain Hobs</a></li>
                           </ul>
                           <!-- times-->
                         </div>
@@ -194,8 +194,8 @@
                     <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Oven<span></a></li>
                     <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Hoods<span></a></li>
                     <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Hoods<span></a></li>
-                    <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Hookers<span></a></li>
-                    <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Hookers<span></a></li>
+                    <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Hobs<span></a></li>
+                    <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Hobs<span></a></li>
                   </ul>
                 </div>
               </div>
@@ -209,14 +209,14 @@
                         <ul>
                           <li><a href="shop3.html">Oven</a></li>
                           <li><a href="shop3.html">Hoods</a></li>
-                          <li><a href="shop3.html">Hookers</a></li>
+                          <li><a href="shop3.html">Hobs</a></li>
                         </ul>
                       </li>                    
                       <li><a href="gallery.html">Pompain</a>
                         <ul>
                           <li><a href="shop7.html">Oven</a></li>
                           <li><a href="shop7.html">Hoods</a></li>
-                          <li><a href="shop7.html">Hookers</a></li>
+                          <li><a href="shop7.html">Hobs</a></li>
                         </ul>
                       </li>
                       <li><a href="gallery.html">Gallery</a></li>
@@ -242,14 +242,14 @@
                           <ul>
                             <li><a href="shop3.html">Oven</a></li>
                             <li><a href="shop3.html">Hoods</a></li>
-                            <li><a href="shop3.html">Hookers</a></li>
+                            <li><a href="shop3.html">Hobs</a></li>
                           </ul>
                         </li>                    
                         <li><a href="gallery.html">Pompain</a>
                           <ul>
                             <li><a href="shop7.html">Oven</a></li>
                             <li><a href="shop7.html">Hoods</a></li>
-                            <li><a href="shop7.html">Hookers</a></li>
+                            <li><a href="shop7.html">Hobs</a></li>
                           </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
@@ -402,7 +402,7 @@
                             <h2 class="title-carousel">Featured Products</h2>
                         </div>
                     </div>
-                    <div class="metro-carousel" data-loop="true" data-items="4" data-margin="30" data-autoplay="true" data-autoplay-timeout="10000" data-smart-speed="2000" data-dots="false" data-nav="true" data-nav-speed="false" data-r-x-small="1" data-r-x-small-nav="true" data-r-x-small-dots="false" data-r-x-medium="2" data-r-x-medium-nav="true" data-r-x-medium-dots="false" data-r-small="2" data-r-small-nav="true" data-r-small-dots="false" data-r-medium="3" data-r-medium-nav="true" data-r-medium-dots="false" data-r-large="4" data-r-large-nav="true" data-r-large-dots="false">
+                    <div class="Gadallah-carousel" data-loop="true" data-items="4" data-margin="30" data-autoplay="true" data-autoplay-timeout="10000" data-smart-speed="2000" data-dots="false" data-nav="true" data-nav-speed="false" data-r-x-small="1" data-r-x-small-nav="true" data-r-x-small-dots="false" data-r-x-medium="2" data-r-x-medium-nav="true" data-r-x-medium-dots="false" data-r-small="2" data-r-small-nav="true" data-r-small-dots="false" data-r-medium="3" data-r-medium-nav="true" data-r-medium-dots="false" data-r-large="4" data-r-large-nav="true" data-r-large-dots="false">
                         <div class="product-box1">
                             <ul class="product-social">
                                 <li><a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a></li>
@@ -528,8 +528,8 @@
                     <li><a href="shop7.html">Pompain Oven<span></a></li>
                     <li><a href="shop3.html">Ecomatic Hoods<span></a></li>
                     <li><a href="shop7.html">Pompain Hoods<span></a></li>
-                    <li><a href="shop3.html">Ecomatic Hookers<span></a></li>
-                    <li><a href="shop7.html">Pompain Hookers<span></a></li>
+                    <li><a href="shop3.html">Ecomatic Hobs<span></a></li>
+                    <li><a href="shop7.html">Pompain Hobs<span></a></li>
                   </ul>
                 </div>
               </div>
@@ -593,7 +593,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 col-xs-12">
-                <p>© 2016 Metro All Rights Reserved. Designed by<a href="http://radiustheme.com/" target="_blank"> RadiusTheme</a>
+                <p>© 2017 Gadallah All Rights Reserved. Designed by<a href="http://7elmak.com/" target="_blank"> 7elmak</a>
                 </p>
               </div>
             </div>
@@ -614,25 +614,25 @@
                             <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
                                 <div class="inner-product-details-left">
                                     <div class="tab-content">
-                                        <div id="metro-related1" class="tab-pane fade active in">
+                                        <div id="Gadallah-related1" class="tab-pane fade active in">
                                             <a href="#"><img class="img-responsive" src="img/product/product-details1.jpg" alt="single"></a>
                                         </div>
-                                        <div id="metro-related2" class="tab-pane fade">
+                                        <div id="Gadallah-related2" class="tab-pane fade">
                                             <a href="#"><img class="img-responsive" src="img/product/product-details1.jpg" alt="single"></a>
                                         </div>
-                                        <div id="metro-related3" class="tab-pane fade">
+                                        <div id="Gadallah-related3" class="tab-pane fade">
                                             <a href="#"><img class="img-responsive" src="img/product/product-details1.jpg" alt="single"></a>
                                         </div>
                                     </div>
                                     <ul>
                                         <li class="active">
-                                            <a aria-expanded="false" data-toggle="tab" href="#metro-related1"><img class="img-responsive" src="img/product/product-details4.jpg" alt="related1"></a>
+                                            <a aria-expanded="false" data-toggle="tab" href="#Gadallah-related1"><img class="img-responsive" src="img/product/product-details4.jpg" alt="related1"></a>
                                         </li>
                                         <li>
-                                            <a aria-expanded="false" data-toggle="tab" href="#metro-related2"><img class="img-responsive" src="img/product/product-details4.jpg" alt="related2"></a>
+                                            <a aria-expanded="false" data-toggle="tab" href="#Gadallah-related2"><img class="img-responsive" src="img/product/product-details4.jpg" alt="related2"></a>
                                         </li>
                                         <li>
-                                            <a aria-expanded="false" data-toggle="tab" href="#metro-related3"><img class="img-responsive" src="img/product/product-details4.jpg" alt="related3"></a>
+                                            <a aria-expanded="false" data-toggle="tab" href="#Gadallah-related3"><img class="img-responsive" src="img/product/product-details4.jpg" alt="related3"></a>
                                         </li>
                                     </ul>
                                 </div>
