--- a/404.html
+++ b/404.html
@@ -1,13 +1,10 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-
-<!-- Mirrored from www.radiustheme.com/demo/html/metro/metro/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Aug 2017 13:42:21 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Metro | 404 </title>
+    <title> Gadallah | 404 </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -45,231 +42,68 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <!-- Add your site or application content here -->
-        <!-- Header Area Start Here -->
-        <header>
-      <div class="header-area-style3" id="sticker">
-        <div class="header-top">
-          <div class="header-top-inner-top">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                  <div class="header-contact">
-                    <ul>
-                      <li><i class="fa fa-phone" aria-hidden="true"></i><a href="tel:01234567890">01234567890</a>
-                      </li>
-                      <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:info@gadallah.com">info@gadallah.com</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                  <div class="account-wishlist">
-                    <ul>
-                      <li><a href="login-registration.html"><i class="fa fa-lock" aria-hidden="true"></i> Account</a>
-                      </li>
-                      <li><a href="#"><i class="fa fa-globe" aria-hidden="true"></i> العربية</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="header-top-inner-bottom">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-                  <div class="logo-area">
-                    <a href="index.html"><img class="img-responsive" src="img/logo.png" alt="logo">
-                    </a>
-                  </div>
-                </div>
-                <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-                  <div class="search-area">
-                    <div class="input-group" id="adv-search">
-                      <input type="text" class="form-control" placeholder="Search Product" />
-                      <div class="input-group-btn">
-                        <div class="btn-group" role="group">
-                          <div class="dropdown dropdown-lg">
-                            <button type="button" class="btn btn-metro dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                              <span>All Categories</span>
-                              <i class="fa fa-caret-up" aria-hidden="true"></i>
-                              <i class="fa fa-caret-down" aria-hidden="true"></i>
-                            </button>
-                            <div class="dropdown-menu dropdown-menu-right" role="menu">
-                              <ul class="sidenav-nav">
-                                <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Oven</a></li>
-                                <li><a href="shop3.html"><i class="flaticon-polo"></i>Ecomatic Hoods</a></li>
-                                <li><a href="shop3.html"><i class="flaticon-plug"></i>Ecomatic Hooker</a></li>
-                                <li><a href="shop7.html"><i class="flaticon-necklace"></i>Pompain Oven</a></li>
-                                <li><a href="shop7.html"><i class="flaticon-screen"></i>Pompain Hoods</a></li>
-                                <li><a href="shop7.html"><i class="flaticon-headphones"></i>Pompain Hookers</a></li>
-                              </ul>
-                            </div>
-                          </div>
-                          <button type="button" class="btn btn-metro-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-                  <ul class="header-cart-area">
-                    <li>
-                      <div class="additional-menu-area" id="additional-menu-area">
-                        <div id="mySidenav" class="sidenav">
-                          <a href="#" class="closebtn">×</a>
-                          <div class="sidenav-search">
-                            <div class="input-group stylish-input-group">
-                              <input type="text" placeholder="Search Here . . ." class="form-control">
-                              <span class="input-group-addon">
-                                <button type="submit">
-                                  <span class="glyphicon glyphicon-search"></span>
-                              </button>
-                              </span>
-                            </div>
-                          </div>
-                          <ul class="sidenav-login-registration">
-                            <li data-toggle="collapse" data-target="#login" class="collapsed">
-                              <a href="#">Login<span class="arrow"></span></a>
-                              <div class="collapse" id="login">
-                                <div class="login-registration-field">
-                                  <form method="post">
-                                    <label>Username or email address *</label>
-                                    <input type="text">
-                                    <label>Password *</label>
-                                    <input type="password">
-                                    <button value="Login" type="submit" class="btn-side-nav disabled">Login</button>
-                                  </form>
-                                </div>
-                              </div>
-                            </li>
-                            <li data-toggle="collapse" data-target="#registration" class="collapsed">
-                              <a href="#">Registration<span class="arrow"></span></a>
-                              <div class="collapse" id="registration">
-                                <div class="login-registration-field">
-                                  <form method="post">
-                                    <label>User Name*</label>
-                                    <input type="text">
-                                    <label>E-mail address *</label>
-                                    <input type="email">
-                                    <label>Password *</label>
-                                    <input type="password">
-                                    <button value="Login" type="submit" class="btn-side-nav disabled">Register</button>
-                                  </form>
-                                </div>
-                              </div>
-                            </li>
-                          </ul>
-                          <h3 class="ctg-name-title">Category Name List</h3>
-                          <ul class="sidenav-nav">
-                            <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Oven</a></li>
-                            <li><a href="shop3.html"><i class="flaticon-polo"></i>Ecomatic Hoods</a></li>
-                            <li><a href="shop3.html"><i class="flaticon-plug"></i>Ecomatic Hooker</a></li>
-                            <li><a href="shop3.html"><i class="flaticon-necklace"></i>Pompain Oven</a></li>
-                            <li><a href="shop3.html"><i class="flaticon-screen"></i>Pompain Hoods</a></li>
-                            <li><a href="shop3.html"><i class="flaticon-headphones"></i>Pompain Hookers</a></li>
-                          </ul>
-                          <!-- times-->
-                        </div>
-                        <span class="side-menu-open side-menu-trigger"><i class="fa fa-bars" aria-hidden="true"></i></span>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="header-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-3 col-md-3 col-sm-4">
-                <div class="logo-area">
-                  <a href="index.html"><img class="img-responsive" src="img/logo.png" alt="logo">
-                  </a>
-                </div>
-                <div class="category-menu-area" id="category-menu-area">
-                  <h2 class="category-menu-title"><a href="#"><i class="fa fa-bars" aria-hidden="true"></i></a>Categories</h2>
-                  <ul class="category-menu-area-inner">
-                    <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Oven<span></a></li>
-                    <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Oven<span></a></li>
-                    <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Hoods<span></a></li>
-                    <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Hoods<span></a></li>
-                    <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Hookers<span></a></li>
-                    <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Hookers<span></a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-lg-9 col-md-9 col-sm-8">
-                <div class="main-menu-area">
-                  <nav>
-                    <ul>
-                      <li class="active"><a href="index.html">Home</a></li>
-                      <li><a href="about.html">About</a></li>
-                      <li><a href="gallery.html">Ecomatic</a>
-                        <ul>
-                          <li><a href="shop3.html">Oven</a></li>
-                          <li><a href="shop3.html">Hoods</a></li>
-                          <li><a href="shop3.html">Hookers</a></li>
-                        </ul>
-                      </li>                    
-                      <li><a href="gallery.html">Pompain</a>
-                        <ul>
-                          <li><a href="shop7.html">Oven</a></li>
-                          <li><a href="shop7.html">Hoods</a></li>
-                          <li><a href="shop7.html">Hookers</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="gallery.html">Gallery</a></li>
-                      <li><a href="contact.html">Contact</a>
-                      </li>
-                    </ul>
-                  </nav>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Mobile Menu Area Start Here -->
-          <div class="mobile-menu-area">
-            <div class="container">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="mobile-menu">
-                    <nav id="dropdown">
-                      <ul>
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="gallery.html">Ecomatic</a>
-                          <ul>
-                            <li><a href="shop3.html">Oven</a></li>
-                            <li><a href="shop3.html">Hoods</a></li>
-                            <li><a href="shop3.html">Hookers</a></li>
-                          </ul>
-                        </li>                    
-                        <li><a href="gallery.html">Pompain</a>
-                          <ul>
-                            <li><a href="shop7.html">Oven</a></li>
-                            <li><a href="shop7.html">Hoods</a></li>
-                            <li><a href="shop7.html">Hookers</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li><a href="contact.html">Contact</a>
-                        </li>
-                      </ul>
-                    </nav>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Mobile Menu Area End Here -->
-        </div>
+
+        <!-- Start Navigation -->
+    <nav class="navbar navbar-default navbar-sticky bootsnav">
+      <!-- Start Top Search -->
+      <div id="search">
+        <button type="button" class="close">×</button>
+        <form>
+          <input class="search" type="search" value="" placeholder="type keyword(s) here" />
+          <!-- <button type="submit" class="btn btn-primary">Search</button> -->
+          <input type="submit" name="" value="Search" class="btn">
+        </form>
       </div>
-    </header>
-        <!-- Header Area End Here -->
+      <!-- End Top Search -->
+
+      <div class="container">            
+        <!-- Start Atribute Navigation -->
+        <div class="attr-nav">
+          <ul>
+            <li><a href="#search"><i class="fa fa-search"></i></a></li>
+          </ul>
+        </div>
+        <!-- End Atribute Navigation -->
+
+        <!-- Start Header Navigation -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
+              <i class="fa fa-bars"></i>
+          </button>
+          <a class="navbar-brand" href="#brand"><img src="img/logo.png" class="logo" alt=""></a>
+        </div>
+        <!-- End Header Navigation -->
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-menu">
+          <ul class="nav navbar-nav navbar-center" data-in="fadeIn" data-out="fadeOut">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li class="dropdown">
+              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" >Ecomatic</a>
+              <ul class="dropdown-menu">
+                <li><a href="shop3.html">Oven</a></li>
+                <li><a href="shop3.html">Hoods</a></li>
+                <li><a href="shop3.html">Hobs</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" >Pompain</a>
+              <ul class="dropdown-menu">
+                <li><a href="shop3.html">Oven</a></li>
+                <li><a href="shop3.html">Hoods</a></li>
+                <li><a href="shop3.html">Hobs</a></li>
+              </ul>
+            </li>
+            <li><a href="gallery.html">Offers</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div>
+    </nav>
+    <!-- End Navigation -->
+
+
         <!-- Page Error Area Start Here -->
         <div class="page-error-area">
             <div class="container">
@@ -318,8 +152,8 @@
                     <li><a href="shop7.html">Pompain Oven<span></a></li>
                     <li><a href="shop3.html">Ecomatic Hoods<span></a></li>
                     <li><a href="shop7.html">Pompain Hoods<span></a></li>
-                    <li><a href="shop3.html">Ecomatic Hookers<span></a></li>
-                    <li><a href="shop7.html">Pompain Hookers<span></a></li>
+                    <li><a href="shop3.html">Ecomatic Hobs<span></a></li>
+                    <li><a href="shop7.html">Pompain Hobs<span></a></li>
                   </ul>
                 </div>
               </div>
@@ -383,7 +217,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 col-xs-12">
-                <p>© 2016 Metro All Rights Reserved. Designed by<a href="http://radiustheme.com/" target="_blank"> RadiusTheme</a>
+                <p>© 2017 Gadallah All Rights Reserved. Designed by<a href="http://7elmak.com/" target="_blank"> 7elmak</a>
                 </p>
               </div>
             </div>
@@ -401,24 +235,14 @@
     <script src="js/vendor/jquery-2.2.4.min.js" type="text/javascript"></script>
     <!-- Bootstrap js -->
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- Owl Cauosel JS -->
-    <script src="js/owl.carousel.min.js" type="text/javascript"></script>
-    <!-- Meanmenu Js -->
-    <script src="js/jquery.meanmenu.min.js" type="text/javascript"></script>
     <!-- WOW JS -->
     <script src="js/wow.min.js" type="text/javascript"></script>
     <!-- Plugins js -->
     <script src="js/plugins.js" type="text/javascript"></script>
-    <!-- Countdown js -->
-    <script src="js/jquery.countdown.min.js" type="text/javascript"></script>
     <!-- Srollup js -->
     <script src="js/jquery.scrollUp.min.js" type="text/javascript"></script>
-    <!-- Switch js -->
-    <script src="js/switch-style.js" type="text/javascript"></script>
     <!-- Custom Js -->
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 
-
-<!-- Mirrored from www.radiustheme.com/demo/html/metro/metro/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Aug 2017 13:42:21 GMT -->
 </html>
