--- a/login-registration.html
+++ b/login-registration.html
@@ -1,13 +1,10 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-
-<!-- Mirrored from www.radiustheme.com/demo/html/metro/metro/login-registration.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Aug 2017 13:41:49 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Metro | Login Registration </title>
+    <title> Gadallah | Login Registration </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -91,7 +88,7 @@
                       <div class="input-group-btn">
                         <div class="btn-group" role="group">
                           <div class="dropdown dropdown-lg">
-                            <button type="button" class="btn btn-metro dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                            <button type="button" class="btn btn-Gadallah dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                               <span>All Categories</span>
                               <i class="fa fa-caret-up" aria-hidden="true"></i>
                               <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -103,11 +100,11 @@
                                 <li><a href="shop3.html"><i class="flaticon-plug"></i>Ecomatic Hooker</a></li>
                                 <li><a href="shop7.html"><i class="flaticon-necklace"></i>Pompain Oven</a></li>
                                 <li><a href="shop7.html"><i class="flaticon-screen"></i>Pompain Hoods</a></li>
-                                <li><a href="shop7.html"><i class="flaticon-headphones"></i>Pompain Hookers</a></li>
+                                <li><a href="shop7.html"><i class="flaticon-headphones"></i>Pompain Hobs</a></li>
                               </ul>
                             </div>
                           </div>
-                          <button type="button" class="btn btn-metro-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                          <button type="button" class="btn btn-Gadallah-search"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                           </button>
                         </div>
                       </div>
@@ -169,7 +166,7 @@
                             <li><a href="shop3.html"><i class="flaticon-plug"></i>Ecomatic Hooker</a></li>
                             <li><a href="shop3.html"><i class="flaticon-necklace"></i>Pompain Oven</a></li>
                             <li><a href="shop3.html"><i class="flaticon-screen"></i>Pompain Hoods</a></li>
-                            <li><a href="shop3.html"><i class="flaticon-headphones"></i>Pompain Hookers</a></li>
+                            <li><a href="shop3.html"><i class="flaticon-headphones"></i>Pompain Hobs</a></li>
                           </ul>
                           <!-- times-->
                         </div>
@@ -197,8 +194,8 @@
                     <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Oven<span></a></li>
                     <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Hoods<span></a></li>
                     <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Hoods<span></a></li>
-                    <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Hookers<span></a></li>
-                    <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Hookers<span></a></li>
+                    <li><a href="shop3.html"><i class="flaticon-dress-1"></i>Ecomatic Hobs<span></a></li>
+                    <li><a href="shop7.html"><i class="flaticon-dress-1"></i>Pompain Hobs<span></a></li>
                   </ul>
                 </div>
               </div>
@@ -212,14 +209,14 @@
                         <ul>
                           <li><a href="shop3.html">Oven</a></li>
                           <li><a href="shop3.html">Hoods</a></li>
-                          <li><a href="shop3.html">Hookers</a></li>
+                          <li><a href="shop3.html">Hobs</a></li>
                         </ul>
                       </li>                    
                       <li><a href="gallery.html">Pompain</a>
                         <ul>
                           <li><a href="shop7.html">Oven</a></li>
                           <li><a href="shop7.html">Hoods</a></li>
-                          <li><a href="shop7.html">Hookers</a></li>
+                          <li><a href="shop7.html">Hobs</a></li>
                         </ul>
                       </li>
                       <li><a href="gallery.html">Gallery</a></li>
@@ -245,14 +242,14 @@
                           <ul>
                             <li><a href="shop3.html">Oven</a></li>
                             <li><a href="shop3.html">Hoods</a></li>
-                            <li><a href="shop3.html">Hookers</a></li>
+                            <li><a href="shop3.html">Hobs</a></li>
                           </ul>
                         </li>                    
                         <li><a href="gallery.html">Pompain</a>
                           <ul>
                             <li><a href="shop7.html">Oven</a></li>
                             <li><a href="shop7.html">Hoods</a></li>
-                            <li><a href="shop7.html">Hookers</a></li>
+                            <li><a href="shop7.html">Hobs</a></li>
                           </ul>
                         </li>
                         <li><a href="gallery.html">Gallery</a></li>
@@ -350,8 +347,8 @@
                     <li><a href="shop7.html">Pompain Oven<span></a></li>
                     <li><a href="shop3.html">Ecomatic Hoods<span></a></li>
                     <li><a href="shop7.html">Pompain Hoods<span></a></li>
-                    <li><a href="shop3.html">Ecomatic Hookers<span></a></li>
-                    <li><a href="shop7.html">Pompain Hookers<span></a></li>
+                    <li><a href="shop3.html">Ecomatic Hobs<span></a></li>
+                    <li><a href="shop7.html">Pompain Hobs<span></a></li>
                   </ul>
                 </div>
               </div>
@@ -415,7 +412,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-12 col-xs-12">
-                <p>© 2016 Metro All Rights Reserved. Designed by<a href="http://radiustheme.com/" target="_blank"> RadiusTheme</a>
+                <p>© 2017 Gadallah All Rights Reserved. Designed by<a href="http://7elmak.com/" target="_blank"> 7elmak</a>
                 </p>
               </div>
             </div>
@@ -452,5 +449,4 @@
 </body>
 
 
-<!-- Mirrored from www.radiustheme.com/demo/html/metro/metro/login-registration.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Aug 2017 13:41:49 GMT -->
 </html>
