--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                 </li>
               </ul>
             </li>
-            <li><a href="gallery.html">Offers</a>
+            <li><a href="offers.html">Offers</a>
             </li>
             <li><a href="contact.html">Contact</a>
             </li>
