--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                 </li>
               </ul>
             </li>
-            <li><a href="gallery.html">Offers</a>
+            <li><a href="offers.html">Offers</a>
             </li>
             <li class="active"><a href="contact.html">Contact</a>
             </li>
