--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         <!-- Start Atribute Navigation -->
         <div class="attr-nav">
           <ul>
-            <li><a href="#search"><i class="fa fa-search"></i></a>
-            </li>
+            <li><a href="#search"><i class="fa fa-search"></i></a></li>
           </ul>
         </div>
         <!-- End Atribute Navigation -->
@@ -80,8 +79,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-menu">
           <ul class="nav navbar-nav navbar-center" data-in="fadeIn" data-out="fadeOut">
-            <li class="active"><a href="index.html">Home</a>
-            </li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a>
             </li>
             <li class="dropdown">
@@ -106,7 +104,7 @@
                 </li>
               </ul>
             </li>
-            <li><a href="gallery.html">Offers</a>
+            <li><a href="offers.html">Offers</a>
             </li>
             <li><a href="contact.html">Contact</a>
             </li>
