--- a/offers.html
+++ b/offers.html
@@ -2,49 +2,51 @@
 <html class="no-js" lang="">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Gadallah | 404 </title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-    <!-- Normalize CSS -->
-    <link rel="stylesheet" href="css/normalize.css">
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="css/main.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Animate CSS -->
-    <link rel="stylesheet" href="css/animate.min.css">
-    <!-- Font-awesome CSS-->
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <!-- Flaticon CSS-->
-    <link rel="stylesheet" type="text/css" href="css/font/flaticon.css">
-    <!-- Owl Caousel CSS -->
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <!-- Main Menu CSS-->
-    <link rel="stylesheet" href="css/meanmenu.min.css">
-    <!-- Select2 CSS -->
-    <link rel="stylesheet" href="css/select2.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Switch Style CSS -->
-    <link rel="stylesheet" href="css/switch-style.css">
-    <!-- Modernizr Js -->
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title> Gad Allah | Offers </title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+  <!-- Normalize CSS -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="css/main.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Animate CSS -->
+  <link rel="stylesheet" href="css/animate.min.css">
+  <!-- Font-awesome CSS-->
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <!-- Flaticon CSS-->
+  <link rel="stylesheet" type="text/css" href="css/font/flaticon.css">
+  <!-- Owl Caousel CSS -->
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <!-- Main Menu CSS-->
+  <link rel="stylesheet" href="css/meanmenu.min.css">
+  <!-- Select2 CSS -->
+  <link rel="stylesheet" href="css/select2.min.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
+  <!-- bootsnav Style CSS -->
+  <link rel="stylesheet" href="css/bootsnav.css">
+  <link rel="stylesheet" href="css/bootsnav_style.css">
+  <!-- Modernizr Js -->
+  <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body>
-    <div class="wrapper-area">
-        <!--[if lt IE 8]>
+  <div class="wrapper-area">
+    <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <!-- Add your site or application content here -->
+    <!-- Add your site or application content here -->
 
-        <!-- Start Navigation -->
-    <nav class="navbar navbar-default navbar-sticky bootsnav">
+
+    <!-- Start Navigation -->
+    <nav class="navbar navbar-default bootsnav navbar-sticky">
       <!-- Start Top Search -->
       <div id="search">
         <button type="button" class="close">×</button>
@@ -56,11 +58,12 @@
       </div>
       <!-- End Top Search -->
 
-      <div class="container">            
+      <div class="container">
         <!-- Start Atribute Navigation -->
         <div class="attr-nav">
           <ul>
-            <li><a href="#search"><i class="fa fa-search"></i></a></li>
+            <li><a href="#search"><i class="fa fa-search"></i></a>
+            </li>
           </ul>
         </div>
         <!-- End Atribute Navigation -->
@@ -68,19 +71,20 @@
         <!-- Start Header Navigation -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
-              <i class="fa fa-bars"></i>
+            <i class="fa fa-bars"></i>
           </button>
-          <a class="navbar-brand" href="#brand"><img src="img/logo.png" class="logo" alt=""></a>
+          <a class="navbar-brand" href="#brand"><img src="img/logo.png" class="logo" alt="">
+          </a>
         </div>
         <!-- End Header Navigation -->
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-menu">
           <ul class="nav navbar-nav navbar-center" data-in="fadeIn" data-out="fadeOut">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
             <li class="dropdown">
-              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" >Ecomatic</a>
+              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown">Ecomatic</a>
               <ul class="dropdown-menu">
                 <li><a href="shop3.html">Oven</a></li>
                 <li><a href="shop3.html">Hoods</a></li>
@@ -88,45 +92,46 @@
               </ul>
             </li>
             <li class="dropdown">
-              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown" >Pompain</a>
+              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown">Pompain</a>
               <ul class="dropdown-menu">
                 <li><a href="shop3.html">Oven</a></li>
                 <li><a href="shop3.html">Hoods</a></li>
                 <li><a href="shop3.html">Hobs</a></li>
               </ul>
             </li>
-            <li><a href="gallery.html">Offers</a></li>
+            <li class="active"><a href="offers.html">Offers</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
+        </div>
+        <!-- /.navbar-collapse -->
       </div>
     </nav>
     <!-- End Navigation -->
 
 
-        <!-- Page Error Area Start Here -->
-        <div class="page-error-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div class="page-error-top">
-                            <span>404</span>
-                            <p>Sorry Page Was Not Found</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div class="page-error-bottom">
-                            <p>The page you are looking is not available or has been removed.</p>
-                            <p>Try going to Home Page by using the button below.</p>
-                            <a href="index.html" class="btn btn-error">Go To Home Page</a>
-                        </div>
-                    </div>
-                </div>
+    <!-- Inner Page Banner Area Start Here -->
+    <div class="inner-page-banner-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="breadcrumb-area">
+              <h1>Offers</h1>
+              <ul>
+                <li><a href="#">Home</a> /</li>
+                <li>Offers</li>
+              </ul>
             </div>
+          </div>
         </div>
-        <!-- Page Error Area End Here -->
-        <!-- Footer Area Start Here -->
-        <footer>
+      </div>
+    </div>
+    <!-- Inner Page Banner Area End Here -->
+    <!-- About Us Page Area Start Here -->
+    <div class="about-us-page-area">
+    </div>
+    <!-- About Us Page Area End Here -->
+    <!-- Footer Area Start Here -->
+    <footer>
       <div class="footer-area">
         <div class="footer-area-top">
           <div class="container">
@@ -225,24 +230,33 @@
         </div>
       </div>
     </footer>
-        <!-- Footer Area End Here -->
-    </div>
-
-    <!-- Preloader Start Here -->
-    <div id="preloader"></div>
-    <!-- Preloader End Here -->
-    <!-- jquery-->
-    <script src="js/vendor/jquery-2.2.4.min.js" type="text/javascript"></script>
-    <!-- Bootstrap js -->
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- WOW JS -->
-    <script src="js/wow.min.js" type="text/javascript"></script>
-    <!-- Plugins js -->
-    <script src="js/plugins.js" type="text/javascript"></script>
-    <!-- Srollup js -->
-    <script src="js/jquery.scrollUp.min.js" type="text/javascript"></script>
-    <!-- Custom Js -->
-    <script src="js/main.js" type="text/javascript"></script>
+    <!-- Footer Area End Here -->
+  </div>
+  <!-- Preloader Start Here -->
+  <div id="preloader"></div>
+  <!-- Preloader End Here -->
+  <!-- jquery-->
+  <script src="js/vendor/jquery-2.2.4.min.js" type="text/javascript"></script>
+  <!-- Bootstrap js -->
+  <script src="js/bootstrap.min.js" type="text/javascript"></script>
+  <!-- bootsnav js -->
+  <script src="js/bootsnav.js" type="text/javascript"></script>
+  <!-- Owl Cauosel JS -->
+  <script src="js/owl.carousel.min.js" type="text/javascript"></script>
+  <!-- Meanmenu Js -->
+  <script src="js/jquery.meanmenu.min.js" type="text/javascript"></script>
+  <!-- WOW JS -->
+  <script src="js/wow.min.js" type="text/javascript"></script>
+  <!-- Plugins js -->
+  <script src="js/plugins.js" type="text/javascript"></script>
+  <!-- Countdown js -->
+  <script src="js/jquery.countdown.min.js" type="text/javascript"></script>
+  <!-- Srollup js -->
+  <script src="js/jquery.scrollUp.min.js" type="text/javascript"></script>
+  <!-- Switch js -->
+  <script src="js/switch-style.js" type="text/javascript"></script>
+  <!-- Custom Js -->
+  <script src="js/main.js" type="text/javascript"></script>
 </body>
 
 </html>
