--- a/shop7.html
+++ b/shop7.html
@@ -106,7 +106,7 @@
                 </li>
               </ul>
             </li>
-            <li><a href="gallery.html">Offers</a>
+            <li><a href="offers.html">Offers</a>
             </li>
             <li><a href="contact.html">Contact</a>
             </li>
@@ -136,7 +136,7 @@
     </div>
     <!-- Inner Page Banner Area End Here -->
     <!-- Shop Page Area Start Here -->
-    <div class="shop-page-area">
+    <div class="padding_top_0">
       <main class="cd-main-content">
         <div class="cd-tab-filter-wrapper">
           <div class="cd-tab-filter">
