--- a/about.html
+++ b/about.html
@@ -86,25 +86,19 @@
             <li class="active"><a href="about.html">About Us</a>
             </li>
             <li class="dropdown">
-              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown">Ecomatic</a>
+              <a href="gallery-1.html" class="dropdown-toggle" data-toggle="dropdown">Ecomatic</a>
               <ul class="dropdown-menu">
-                <li><a href="shop3.html">Oven</a>
-                </li>
-                <li><a href="shop3.html">Hoods</a>
-                </li>
-                <li><a href="shop3.html">Hobs</a>
-                </li>
+                <li><a href="eco-oven.html">Oven</a></li>
+                <li><a href="eco-hoods.html">Hoods</a></li>
+                <li><a href="eco-hobs.html">Hobs</a></li>
               </ul>
             </li>
             <li class="dropdown">
-              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown">Pompain</a>
+              <a href="gallery-2.html" class="dropdown-toggle" data-toggle="dropdown">Pompain</a>
               <ul class="dropdown-menu">
-                <li><a href="shop3.html">Oven</a>
-                </li>
-                <li><a href="shop3.html">Hoods</a>
-                </li>
-                <li><a href="shop3.html">Hobs</a>
-                </li>
+                <li><a href="pom-oven.html">Oven</a></li>
+                <li><a href="pom-hoods.html">Hoods</a></li>
+                <li><a href="pom-hobs.html">Hobs</a></li>
               </ul>
             </li>
             <li><a href="offers.html">Offers</a>
@@ -127,7 +121,7 @@
             <div class="breadcrumb-area">
               <h1>About Us</h1>
               <ul>
-                <li><a href="#">Home</a> /</li>
+                <li><a href="index.html">Home</a> /</li>
                 <li>About</li>
               </ul>
             </div>
@@ -257,12 +251,12 @@
                 <div class="footer-box">
                   <h3>Products</h3>
                   <ul class="info-list">
-                    <li><a href="shop3.html">Ecomatic Oven<span></a></li>
-                    <li><a href="shop7.html">Pompain Oven<span></a></li>
-                    <li><a href="shop3.html">Ecomatic Hoods<span></a></li>
-                    <li><a href="shop7.html">Pompain Hoods<span></a></li>
-                    <li><a href="shop3.html">Ecomatic Hobs<span></a></li>
-                    <li><a href="shop7.html">Pompain Hobs<span></a></li>
+                    <li><a href="eco-oven.html">Ecomatic Oven<span></a></li>
+                    <li><a href="pom-oven.html">Pompain Oven<span></a></li>
+                    <li><a href="eco-hoods.html">Ecomatic Hoods<span></a></li>
+                    <li><a href="pom-hoods.htmll">Pompain Hoods<span></a></li>
+                    <li><a href="eco-hobs.html">Ecomatic Hobs<span></a></li>
+                    <li><a href="pom-hobs.html">Pompain Hobs<span></a></li> 
                   </ul>
                 </div>
               </div>
@@ -271,7 +265,8 @@
                   <h3>NewsLetter</h3>
                   <p>Tmply dummy text of the printing and typesetting industry nummy ever.</p>
                   <ul class="footer-social">
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/Gad-Alla-for-Trade-Agencies-115315538516330/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    </li>
                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
