--- a/gallery-2.html
+++ b/gallery-2.html
@@ -91,7 +91,7 @@
                 <li><a href="eco-hobs.html">Hobs</a></li>
               </ul>
             </li>
-            <li class="dropdown">
+            <li class="dropdown active">
               <a href="gallery-2.html" class="dropdown-toggle" data-toggle="dropdown">Pompain</a>
               <ul class="dropdown-menu">
                 <li><a href="pom-oven.html">Oven</a></li>
@@ -99,7 +99,7 @@
                 <li><a href="pom-hobs.html">Hobs</a></li>
               </ul>
             </li>
-            <li class="active"><a href="offers.html">Offers</a></li>
+            <li><a href="offers.html">Offers</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -115,10 +115,10 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="breadcrumb-area">
-              <h1>Offers</h1>
+              <h1>Pompain</h1>
               <ul>
                 <li><a href="index.html">Home</a> /</li>
-                <li>Offers</li>
+                <li>Pompain Products</li>
               </ul>
             </div>
           </div>
@@ -126,10 +126,52 @@
       </div>
     </div>
     <!-- Inner Page Banner Area End Here -->
+
     <!-- About Us Page Area Start Here -->
-    <div class="about-us-page-area">
+    <div class="services1-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 col-xs-12 padding_left_right_5">
+            <div class="services-area-box">
+              <div class="media">
+                <a class="pull-left" href="#">
+                  <img src="img/services/home1-services1.png" alt="services" class="img-responsive">
+                </a>
+                <div class="media-body">
+                  <h3><a href="pom-hoods.html">Hoods</a></h3>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 col-xs-12 padding_left_right_5 padding_left_right_5">
+            <div class="services-area-box">
+              <div class="media">
+                <a class="pull-left" href="#">
+                  <img src="img/services/home1-services2.png" alt="services" class="img-responsive">
+                </a>
+                <div class="media-body">
+                  <h3><a href="pom-oven.html">Oven</a></h3>                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-4 col-xs-12 padding_left_right_5">
+            <div class="services-area-box">
+              <div class="media">
+                <a class="pull-left" href="#">
+                  <img src="img/services/home1-services3.png" alt="services" class="img-responsive">
+                </a>
+                <div class="media-body">
+                  <h3><a href="pom-hobs.html">Hobs</a></h3>                  
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- About Us Page Area End Here -->
+
     <!-- Footer Area Start Here -->
     <footer>
       <div class="footer-area">
