--- a/index.html
+++ b/index.html
@@ -80,34 +80,25 @@
         <div class="collapse navbar-collapse" id="navbar-menu">
           <ul class="nav navbar-nav navbar-center" data-in="fadeIn" data-out="fadeOut">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a>
-            </li>
+            <li><a href="about.html">About Us</a></li>
             <li class="dropdown">
-              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown">Ecomatic</a>
+              <a href="gallery-1.html" class="dropdown-toggle" data-toggle="dropdown">Ecomatic</a>
               <ul class="dropdown-menu">
-                <li><a href="shop3.html">Oven</a>
-                </li>
-                <li><a href="shop3.html">Hoods</a>
-                </li>
-                <li><a href="shop3.html">Hobs</a>
-                </li>
+                <li><a href="eco-oven.html">Oven</a></li>
+                <li><a href="eco-hoods.html">Hoods</a></li>
+                <li><a href="eco-hobs.html">Hobs</a></li>
               </ul>
             </li>
             <li class="dropdown">
-              <a href="gallery.html" class="dropdown-toggle" data-toggle="dropdown">Pompain</a>
+              <a href="gallery-2.html" class="dropdown-toggle" data-toggle="dropdown">Pompain</a>
               <ul class="dropdown-menu">
-                <li><a href="shop3.html">Oven</a>
-                </li>
-                <li><a href="shop3.html">Hoods</a>
-                </li>
-                <li><a href="shop3.html">Hobs</a>
-                </li>
+                <li><a href="pom-oven.html">Oven</a></li>
+                <li><a href="pom-hoods.html">Hoods</a></li>
+                <li><a href="pom-hobs.html">Hobs</a></li>
               </ul>
             </li>
-            <li><a href="offers.html">Offers</a>
-            </li>
-            <li><a href="contact.html">Contact</a>
-            </li>
+            <li><a href="offers.html">Offers</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -199,7 +190,7 @@
                 </a>
                 <div class="media-body">
                   <span>Gad Allah</span>
-                  <h3><a href="#">Hooker</a></h3>
+                  <h3><a href="#">Hobs</a></h3>
                   <p>Prodact #3</p>
 
                 </div>
@@ -243,7 +234,7 @@
                 </a>
                 <div class="media-body">
                   <span>Gad Allah</span>
-                  <h3><a href="#">Hooker</a></h3>
+                  <h3><a href="#">Hobs</a></h3>
                   <p>Prodact #3</p>
 
                 </div>
@@ -750,18 +741,12 @@
                 <div class="footer-box">
                   <h3>Main Links</h3>
                   <ul class="info-list">
-                    <li><a href="about.html">About us</a>
-                    </li>
-                    <li><a href="#">Customer Service</a>
-                    </li>
-                    <li><a href="#">Manufacturers</a>
-                    </li>
-                    <li><a href="#">Privacy policy</a>
-                    </li>
-                    <li><a href="#">Terms & condition</a>
-                    </li>
-                    <li><a href="#">FAQ</a>
-                    </li>
+                    <li><a href="about.html">About us</a></li>
+                    <li><a href="#">Customer Service</a></li>
+                    <li><a href="#">Manufacturers</a></li>
+                    <li><a href="#">Privacy policy</a></li>
+                    <li><a href="#">Terms & condition</a></li>
+                    <li><a href="#">FAQ</a></li>
                   </ul>
                 </div>
               </div>
@@ -769,18 +754,12 @@
                 <div class="footer-box">
                   <h3>Products</h3>
                   <ul class="info-list">
-                    <li><a href="shop3.html">Ecomatic Oven<span></a>
-                    </li>
-                    <li><a href="shop7.html">Pompain Oven<span></a>
-                    </li>
-                    <li><a href="shop3.html">Ecomatic Hoods<span></a>
-                    </li>
-                    <li><a href="shop7.html">Pompain Hoods<span></a>
-                    </li>
-                    <li><a href="shop3.html">Ecomatic Hobs<span></a>
-                    </li>
-                    <li><a href="shop7.html">Pompain Hobs<span></a>
-                    </li>
+                    <li><a href="eco-oven.html">Ecomatic Oven<span></a></li>
+                    <li><a href="pom-oven.html">Pompain Oven<span></a></li>
+                    <li><a href="eco-hoods.html">Ecomatic Hoods<span></a></li>
+                    <li><a href="pom-hoods.htmll">Pompain Hoods<span></a></li>
+                    <li><a href="eco-hobs.html">Ecomatic Hobs<span></a></li>
+                    <li><a href="pom-hobs.html">Pompain Hobs<span></a></li> 
                   </ul>
                 </div>
               </div>
@@ -789,8 +768,7 @@
                   <h3>NewsLetter</h3>
                   <p>Tmply dummy text of the printing and typesetting industry nummy ever.</p>
                   <ul class="footer-social">
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    </li>
+                    <li><a href="https://www.facebook.com/Gad-Alla-for-Trade-Agencies-115315538516330/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     </li>
                     <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -826,11 +804,11 @@
                     </li>
                     <li>
                       <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                      <a href="#">info@gadallah.com</a>
+                      <a href="mailto:info@gad-alla.com">info@gad-alla.com</a>
                     </li>
                     <li>
                       <i class="fa fa-phone" aria-hidden="true"></i>
-                      <a href="#">02-233456789</a>
+                      <a href="tel:0224046323">02-24046323</a>
                     </li>
                     <li>
                       <i class="fa fa-fax" aria-hidden="true"></i>
