--- a/pom-hoods.html
+++ b/pom-hoods.html
@@ -80,10 +80,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-menu">
           <ul class="nav navbar-nav navbar-center" data-in="fadeIn" data-out="fadeOut">
-            <li class="active"><a href="index.html">Home</a>
-            </li>
-            <li><a href="about.html">About Us</a>
-            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li class="dropdown">
               <a href="gallery-1.html" class="dropdown-toggle" data-toggle="dropdown">Ecomatic</a>
               <ul class="dropdown-menu">
@@ -96,14 +94,12 @@
               <a href="gallery-2.html" class="dropdown-toggle" data-toggle="dropdown">Pompain</a>
               <ul class="dropdown-menu">
                 <li><a href="pom-oven.html">Oven</a></li>
-                <li><a href="pom-hoods.html">Hoods</a></li>
+                <li class="active"><a href="pom-hoods.html">Hoods</a></li>
                 <li><a href="pom-hobs.html">Hobs</a></li>
               </ul>
             </li>
-            <li><a href="offers.html">Offers</a>
-            </li>
-            <li><a href="contact.html">Contact</a>
-            </li>
+            <li><a href="offers.html">Offers</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -154,29 +150,32 @@
 
         <section class="cd-gallery">
           <ul>
-            <li class="mix color-1 check1 radio2 option3"><img src="img/img-1.jpg" alt="Image 1">
+            <li class="mix color-1 check1 radio2 option3">
+              <img src="img/gallery/hoods-1.jpg" alt="Image 1">
             </li>
-            <li class="mix color-2 check2 radio2 option2"><img src="img/img-2.jpg" alt="Image 2">
+            <li class="mix color-2 check2 radio2 option2">
+              <img src="img/gallery/hoods-2.jpg" alt="Image 2">
             </li>
-            <li class="mix color-1 check3 radio3 option1"><img src="img/img-3.jpg" alt="Image 3">
+            <li class="mix color-1 check3 radio3 option1">
+              <img src="img/gallery/hoods-3.jpg" alt="Image 3">
             </li>
-            <li class="mix color-1 check3 radio2 option4"><img src="img/img-4.jpg" alt="Image 4">
+            <li class="mix color-1 check3 radio2 option4">
+              <img src="img/gallery/hoods-4.jpg" alt="Image 4">
             </li>
-            <li class="mix color-1 check1 radio3 option2"><img src="img/img-5.jpg" alt="Image 5">
+            <li class="mix color-1 check1 radio3 option2">
+              <img src="img/gallery/hoods-5.jpg" alt="Image 5">
             </li>
-            <li class="mix color-2 check2 radio3 option3"><img src="img/img-6.jpg" alt="Image 6">
+            <li class="mix color-2 check2 radio3 option3">
+              <img src="img/gallery/hoods-6.jpg" alt="Image 6">
             </li>
-            <li class="mix color-2 check2 radio2 option1"><img src="img/img-7.jpg" alt="Image 7">
+            <li class="mix color-2 check2 radio2 option1">
+              <img src="img/gallery/hoods-7.jpg" alt="Image 7">
             </li>
-            <li class="mix color-1 check1 radio3 option4"><img src="img/img-8.jpg" alt="Image 8">
+            <li class="mix color-1 check1 radio3 option4">
+              <img src="img/gallery/hoods-8.jpg" alt="Image 8">
             </li>
-            <li class="mix color-2 check1 radio2 option3"><img src="img/img-9.jpg" alt="Image 9">
-            </li>
-            <li class="mix color-1 check3 radio2 option4"><img src="img/img-10.jpg" alt="Image 10">
-            </li>
-            <li class="mix color-1 check3 radio3 option2"><img src="img/img-11.jpg" alt="Image 11">
-            </li>
-            <li class="mix color-2 check1 radio3 option1"><img src="img/img-12.jpg" alt="Image 12">
+            <li class="mix color-2 check1 radio2 option3">
+              <img src="img/gallery/hoods-9.jpg" alt="Image 9">
             </li>
             <li class="gap"></li>
             <li class="gap"></li>
@@ -445,7 +444,7 @@
                   </div>
                   <ul class="product-details-social">
                     <li>Share:</li>
-                    <li><a href="https://www.facebook.com/Gad-Alla-for-Trade-Agencies-115315538516330/"><i aria-hidden="true" class="fa fa-facebook"></i></a>
+                    <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a>
                     </li>
                     <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a>
                     </li>
