--- a/contact.html
+++ b/contact.html
@@ -135,17 +135,16 @@
         <div class="row margin_bottom">
           <div class="col-lg-9 col-md-9 col-sm-7 col-xs-12">
             <div class="google-map-area">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3456.8519591022036!2d31.0135774845431!3d29.95493658191498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14585117c4951979%3A0x4cf8ed3655028f8!2z2YXZg9iq2Kgg2KjYsdmK2K8g2YfYsdmFINiz2YrYqtmK!5e0!3m2!1sar!2seg!4v1502295992544" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3452.9242536402226!2d31.327857315354272!3d30.06770562442785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583e41c88c578f%3A0xba737ec67a45e1a8!2sTiba+Outlet+Mall!5e0!3m2!1sen!2seg!4v1513358470815" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-5 col-xs-12">
             <div class="contact-us-right">
-              <h2 class="title-sidebar">Head Quarter</h2>
+              <h2 class="title-sidebar">Nasr City</h2>
               <ul>
-                <li class="con-address">30 El-Haram St., Giza, Egyot</li>
-                <li class="con-envelope">info@Gadallah.com</li>
-                <li class="con-phone">01234567894 | 011236547890</li>
-                <li class="con-fax">02-12345678</li>
+                <li class="con-address">71 Nasr Road, Beside Tiba Mall, Nasr City, Cairo.</li>
+                <li class="con-envelope">info@gad-alla.com</li>
+                <li class="con-phone">02- 24046323</li>
               </ul>
             </div>
           </div>
@@ -154,17 +153,17 @@
         <div class="row margin_bottom">
           <div class="col-lg-9 col-md-9 col-sm-7 col-xs-12">
             <div class="google-map-area">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3456.8519591022036!2d31.0135774845431!3d29.95493658191498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14585117c4951979%3A0x4cf8ed3655028f8!2z2YXZg9iq2Kgg2KjYsdmK2K8g2YfYsdmFINiz2YrYqtmK!5e0!3m2!1sar!2seg!4v1502295992544" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13809.326602922567!2d31.32172443622466!3d30.08468667146773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s3+El-Merghany+St+%26+Khalifa+Ma&#39;moun%2C+Beside+Vodafone%2C+Roxy%2C+Cairo.!5e0!3m2!1sen!2seg!4v1513359001089" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-5 col-xs-12">
             <div class="contact-us-right">
-              <h2 class="title-sidebar">Branch #1</h2>
+              <h2 class="title-sidebar">Heliopolis</h2>
               <ul>
-                <li class="con-address">30 El-Haram St., Giza, Egyot</li>
-                <li class="con-envelope">info@Gadallah.com</li>
-                <li class="con-phone">01234567894 | 011236547890</li>
-                <li class="con-fax">02-12345678</li>
+                <li class="con-address">3 El-Merghany St & Khalifa Ma'moun, Beside Vodafone, Roxy, Cairo.</li>
+                <li class="con-envelope">info@gad-alla.com</li>
+                <li class="con-phone">02-22589788</li>
+                <li class="con-phone">01068200200</li>
               </ul>
             </div>
           </div>
@@ -281,23 +280,19 @@
                   <ul class="footer-contact">
                     <li>
                       <i class="fa fa-map-signs" aria-hidden="true"></i>
-                      <a href="#">30 El-Haram St., Giza, Egyot</a>
+                      <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3452.9242536402226!2d31.327857315354272!3d30.06770562442785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583e41c88c578f%3A0xba737ec67a45e1a8!2sTiba+Outlet+Mall!5e0!3m2!1sen!2seg!4v1513358470815" target="_blank">71 Nasr Road, Beside Tiba Mall, Nasr City, Cairo</a>
                     </li>
                     <li>
                       <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                      <a href="#">info@gadallah.com</a>
+                      <a href="mailto:info@gad-alla.com">info@gad-alla.com</a>
                     </li>
                     <li>
                       <i class="fa fa-phone" aria-hidden="true"></i>
-                      <a href="#">02-233456789</a>
-                    </li>
-                    <li>
-                      <i class="fa fa-fax" aria-hidden="true"></i>
-                      <a href="#">02-233456789</a>
+                      <a href="tel:0224046323">02-24046323</a>
                     </li>
                     <li>
                       <i class="fa fa-mobile" aria-hidden="true"></i>
-                      <a href="#">01234567890</a>
+                      <a href="tel:01100445959">01100445959</a>
                     </li>
                   </ul>
                 </div>
