--- a/gallery.html
+++ b/gallery.html
@@ -343,23 +343,19 @@
                   <ul class="footer-contact">
                     <li>
                       <i class="fa fa-map-signs" aria-hidden="true"></i>
-                      <a href="#">30 El-Haram St., Giza, Egyot</a>
+                      <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3452.9242536402226!2d31.327857315354272!3d30.06770562442785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14583e41c88c578f%3A0xba737ec67a45e1a8!2sTiba+Outlet+Mall!5e0!3m2!1sen!2seg!4v1513358470815" target="_blank">71 Nasr Road, Beside Tiba Mall, Nasr City, Cairo</a>
                     </li>
                     <li>
                       <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                      <a href="#">info@gadallah.com</a>
+                      <a href="mailto:info@gad-alla.com">info@gad-alla.com</a>
                     </li>
                     <li>
                       <i class="fa fa-phone" aria-hidden="true"></i>
-                      <a href="#">02-233456789</a>
-                    </li>
-                    <li>
-                      <i class="fa fa-fax" aria-hidden="true"></i>
-                      <a href="#">02-233456789</a>
+                      <a href="tel:0224046323">02-24046323</a>
                     </li>
                     <li>
                       <i class="fa fa-mobile" aria-hidden="true"></i>
-                      <a href="#">01234567890</a>
+                      <a href="tel:01100445959">01100445959</a>
                     </li>
                   </ul>
                 </div>
