--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- RTL Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap-arabic.css">
   <!-- Animate CSS -->
   <link rel="stylesheet" href="css/animate.min.css">
   <!-- Font-awesome CSS-->
@@ -30,6 +32,8 @@
   <link rel="stylesheet" href="lib/custom-slider/css/preview.css" type="text/css" media="screen" />
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+  <!-- RTL Custom CSS -->
+  <link rel="stylesheet" href="style-rtl.css">
   <!-- bootsnav Style CSS -->
   <link rel="stylesheet" href="css/bootsnav.css">
   <link rel="stylesheet" href="css/bootsnav_style.css">
@@ -79,7 +83,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-menu">
           <ul class="nav navbar-nav navbar-center" data-in="fadeIn" data-out="fadeOut">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li class="active"><a href="index.html">الرئيسية</a></li>
             <li><a href="about.html">About Us</a></li>
             <li class="dropdown">
               <a href="gallery-1.html" class="dropdown-toggle" data-toggle="dropdown">Ecomatic</a>
@@ -97,8 +101,8 @@
                 <li><a href="pom-hobs.html">Hobs</a></li>
               </ul>
             </li>
-            <li><a href="offers.html">Offers</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="offers.html">العروض</a></li>
+            <li><a href="contact.html">إتصل بنا</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
