--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,8 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- RTL Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap-arabic.css">
   <!-- Animate CSS -->
   <link rel="stylesheet" href="css/animate.min.css">
   <!-- Font-awesome CSS-->
@@ -30,6 +32,8 @@
   <link rel="stylesheet" href="css/select2.min.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+  <!-- RTL Custom CSS -->
+  <link rel="stylesheet" href="style-rtl.css">
   <!-- bootsnav Style CSS -->
   <link rel="stylesheet" href="css/bootsnav.css">
   <link rel="stylesheet" href="css/bootsnav_style.css">
