--- a/search-result.html
+++ b/search-result.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title> Gad Allah | Offers </title>
+  <title> Gad Allah | Results </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Favicon -->
@@ -15,8 +15,6 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!-- RTL Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap-arabic.css">
   <!-- Animate CSS -->
   <link rel="stylesheet" href="css/animate.min.css">
   <!-- Font-awesome CSS-->
@@ -32,8 +30,6 @@
   <link rel="stylesheet" href="css/select2.min.css">
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
-  <!-- RTL Custom CSS -->
-  <link rel="stylesheet" href="style-rtl.css">
   <!-- bootsnav Style CSS -->
   <link rel="stylesheet" href="css/bootsnav.css">
   <link rel="stylesheet" href="css/bootsnav_style.css">
@@ -119,10 +115,10 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="breadcrumb-area">
-              <h1>Offers</h1>
+              <h1>Search Results</h1>
               <ul>
                 <li><a href="index.html">Home</a> /</li>
-                <li>Offers</li>
+                <li>Results</li>
               </ul>
             </div>
           </div>
@@ -131,129 +127,50 @@
     </div>
     <!-- Inner Page Banner Area End Here -->
 
-
-    <!-- Product Details2 Area Start Here -->
-        <div class="product-details2-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <div class="inner-product-details-left">
-                            <div class="tab-content">
-                                <div class="tab-pane fade active in" id="related1">
-                                    <a href="#" class="zoom ex1"><img alt="single" src="img/product/product-details1.jpg" class="img-responsive"></a>
-                                </div>
-                                <div class="tab-pane fade" id="related2">
-                                    <a href="#" class="zoom ex1"><img alt="single" src="img/product/product-details1.jpg" class="img-responsive"></a>
-                                </div>
-                                <div class="tab-pane fade" id="related3">
-                                    <a href="#" class="zoom ex1"><img alt="single" src="img/product/product-details1.jpg" class="img-responsive"></a>
-                                </div>
-                                <div class="tab-pane fade" id="related4">
-                                    <a href="#" class="zoom ex1"><img alt="single" src="img/product/product-details1.jpg" class="img-responsive"></a>
-                                </div>
-                            </div>
-                            <ul>
-                                <li class="active">
-                                    <a href="#related1" data-toggle="tab" aria-expanded="false"><img alt="related1" src="img/product/product-details4.jpg" class="img-responsive"></a>
-                                </li>
-                                <li>
-                                    <a href="#related2" data-toggle="tab" aria-expanded="false"><img alt="related2" src="img/product/product-details4.jpg" class="img-responsive"></a>
-                                </li>
-                                <li>
-                                    <a href="#related3" data-toggle="tab" aria-expanded="false"><img alt="related3" src="img/product/product-details4.jpg" class="img-responsive"></a>
-                                </li>
-                                <li>
-                                    <a href="#related4" data-toggle="tab" aria-expanded="false"><img alt="related4" src="img/product/product-details4.jpg" class="img-responsive"></a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                        <div class="inner-product-details-right">
-                            <h3>Product Title Here</h3>
-                            <ul>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-star" aria-hidden="true"></i></li>
-                            </ul>
-                            <p class="price">$59.00</p>
-                            <p>Simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the in dustry's s make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker</p>
-                            <div class="product-details-content">
-                                <p><span>SKU:</span> 0010</p>
-                                <p><span>Availability:</span> In stock</p>
-                                <p><span>Category:</span> Demo Products</p>
-                            </div>
-                            <form id="checkout-form">
-                                <ul class="more-option">
-                                    <li>
-                                        <div class="form-group">
-                                            <div class="custom-select">
-                                                <select id="size" class='select2'>
-                                                    <option value="0">Select Your Size</option>
-                                                    <option value="1">XL</option>
-                                                    <option value="2">L</option>
-                                                    <option value="3">M</option>
-                                                    <option value="4">S</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="form-group">
-                                            <div class="custom-select">
-                                                <select id="color" class='select2'>
-                                                    <option value="0">Select Your Color</option>
-                                                    <option value="1">Black</option>
-                                                    <option value="2">White</option>
-                                                    <option value="3">Blue</option>
-                                                    <option value="4">Green</option>
-                                                    <option value="5">Pink</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </form>
-                            <ul class="product-details-social">
-                                <li>Share:</li>
-                                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
+    <!-- Shop Page Area Start Here -->
+    <div class="shop-page-area">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-4 col-xs-12">
+            <div class="product-box2 box">
+              <div class="row">
+                <div class="col-md-3 col-sm-4 col-xs-2">
+                  <img class="img-responsive" src="img/portfolio/3.jpg" alt="product" />
                 </div>
-                <div class="product-details-tab-area">
+                <div class="col-md-9 col-sm-8 col-xs-10">
+                  <div class="product-box2-content">
+                    <h3><a href="#">Product Title Here</a></h3>
+                    <span>$59.00</span>
                     <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12">
-                            <ul>
-                                <li class="active"><a href="#description" data-toggle="tab" aria-expanded="false">Description</a></li>
-                                <li><a href="#review" data-toggle="tab" aria-expanded="false">Review(0)</a></li>
-                                <li><a href="#add-tags" data-toggle="tab" aria-expanded="false">ADD TAGS</a></li>
-                            </ul>
+                      <div class="col-sm-6">
+                        <p>Bag mply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and .</p>
+                      </div>
+                      <div class="col-sm-6">
+                        <div class="product-details-content">
+                          <p><span>SKU:</span> 0010</p>
+                          <p><span>Availability:</span> In stock</p>
+                          <p><span>Category:</span> Demo Products</p>
                         </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12">
-                            <div class="tab-content">
-                                <div class="tab-pane fade active in" id="description">
-                                    <p>Porem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
-                                </div>
-                                <div class="tab-pane fade" id="review">
-                                    <p>Porem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
-                                </div>
-                                <div class="tab-pane fade" id="add-tags">
-                                    <p>Porem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam.</p>
-                                </div>
-                            </div>
-                        </div>
+                      </div>
                     </div>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
-        <!-- Product Details1 Area End Here -->
-
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <ul class="mypagination">
+              <li class="active"><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Shop Page Area End Here -->
 
     <!-- Footer Area Start Here -->
     <footer>
@@ -375,7 +292,7 @@
   <!-- Srollup js -->
   <script src="js/jquery.scrollUp.min.js" type="text/javascript"></script>
   <!-- Switch js -->
-  <script src="js/select2.min.js" type="text/javascript"></script>
+  <script src="js/switch-style.js" type="text/javascript"></script>
   <!-- Custom Js -->
   <script src="js/main.js" type="text/javascript"></script>
 </body>
